# resources/openapi.yml
@@ -7,12 +7,18 @@ info:
     name: MIT
   x-go-package: "github.com/oapi-codegen/runtime"
 paths:
-  /api/v1/users/profile:
+  /api/v1/users/{username}/profile:
     get:
       summary: User Profile
       operationId: getProfile
       tags:
         - profile
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
       responses:
         200:
           description: 'Success'
@@ -27,6 +33,12 @@ paths:
       operationId: updateProfile
       tags:
         - profile
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
       requestBody:
         description: update fields
         required: true
@@ -39,12 +51,18 @@ paths:
           description: 'Success'
         401:
           description: 'Unauthorized'
-  /api/v1/users/profile/notification-settings:
+  /api/v1/users/{username}/profile/notification-settings:
     get:
       summary: Get notifications settings
       operationId: getNotifications
       tags:
         - notification
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
       responses:
         200:
           description: 'Success'
@@ -59,6 +77,12 @@ paths:
       operationId: updateNotification
       tags:
         - notification
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
       requestBody:
         description: update settings
         required: true
